--- a/react-redux-idle-game/src/components/css/BuildingList.css
+++ b/react-redux-idle-game/src/components/css/BuildingList.css
@@ -1,11 +1,43 @@
 .buildingsGroup {
-  background-color: lightgrey;
+  height: 100%;
   display: grid;
   grid-template-columns: repeat(3, minmax(0px, 1fr));
   grid-template-rows: repeat(3, minmax(0px, 1fr));
   text-align: center;
+  justify-items: stretch;
+  align-items: stretch;
+  grid-column-gap: 50px;
+  grid-row-gap: 50px;
 }
 
-.buildingCard {
-  height: 100px;
+.nes-container {
+  margin: 0px 0px !important;
+  padding: 5px 5px !important;
+  background-color: white;
+}
+
+
+.building {
+  display: grid;
+  grid-template-columns: minmax(0px, 1fr) minmax(0px, 1fr) minmax(0px, 2fr);
+  align-items: center;
+  justify-items: center;
+}
+
+#buildingIcon {
+  height: 80px;
+}
+
+#buildingOwned {
+  font-size: 2em;
+}
+
+#buildingName {
+  margin: 0px 0px;
+  font-size: 0.8em;
+}
+
+#buildingCost, #buildingPower {
+  margin: 0px 0px;
+  font-size: 0.7em;
 }
