Made SVG pattern but couldn't get working as background

--- a/react-redux-idle-game/src/components/css/App.css
+++ b/react-redux-idle-game/src/components/css/App.css
@@ -5,4 +5,5 @@
   grid-template-columns: 2fr 1fr;
   grid-template-rows: 3fr 7fr;
   background-color: aliceblue;
+  /* background-image: url(../pictures/bgpattern.svg); */
 }
